--- a/contact.htm
+++ b/contact.htm
@@ -43,13 +43,19 @@
 		Email Number
 		</h2>
 		<h3 class="contact">
-		carpediemleo@outlook.com
+		<a href="carpediemleo@outlook">carpediemleo@outlook.com</a>
 		</h3>
 		<h2>
 		Address
 		</h2>
 		<h3 class="contact">
 		Some random room in Nehru Hall 
-		</h3>
+		</h3
+		
+		<a href="https://www.facebook.com/chinmay.singh.35"><img style ="position:relative; top: 400px; left: 240px; width:100px; height:100px" src="facebook.jpg"></a>
+
+		<a href="https://www.instagram.com/all_savage_no_chill/"><img style ="position:relative; top: 400px; left: 440px; width:100px; height:100px" src="instagram.jpg"></a>
+		
+		<a href="https://www.linkedin.com/in/chinmay-singh-61302215b/"><img style ="position:relative; top: 400px; left: 640px; width:100px; height:100px" src="linkedin.jpg"></a>
 </body>
 </html>		
